--- a/src/components/about-content/aboutContent.css
+++ b/src/components/about-content/aboutContent.css
@@ -62,7 +62,7 @@
   /* margin: 40px 0; */
   display: flex;
   flex-direction: row;
-  animation: fadeIn 2s ease-in-out;
+  /* animation: fadeIn 2s ease-in-out; */
   /* height: 80vh; */
   padding: 60px 120px;
   background-color: rgba(245, 206, 154, 0.653);
