--- a/src/components/courses-content/coursesContent.css
+++ b/src/components/courses-content/coursesContent.css
@@ -5,26 +5,6 @@
   flex-direction: column;
 }
 
-/* .vid {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  object-fit: cover;
-  margin-top: 6%;
-  video {
-    display: flex;
-    justify-content: center;
-    border: #000000 3px solid;
-    align-items: center;
-    width: 70%;
-    height: 70%;
-    border-radius: 10px;
-    object-fit: contain;
-  }
-} */
 .hero-section {
   background: url("../../img/vid1.mp4") no-repeat center center;
   background-size: contain;
@@ -33,9 +13,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 105vh;
-  width: 100%;
-  padding: 65px;
+  height: 101vh;
+  /* width: 100%; */
+  padding: 65px 60px;
   .bg {
     display: flex;
     /* background-color: red; */
@@ -50,7 +30,7 @@
       z-index: -1;
       /* border: #ffea00 3px solid; */
       align-items: center;
-      width: 100%;
+      width: 93%;
       height: 84%;
       overflow: hidden;
       object-fit: cover;
@@ -95,13 +75,6 @@
   color: #000000;
   padding: 80px 60px;
   background: linear-gradient(to right, #dbeaf9, #e3f2fd, #fccfc7);
-  h1 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-    color: #333;
-    text-align: center;
-    text-transform: uppercase;
-  }
   .cards {
     display: flex;
     flex-wrap: wrap;
@@ -177,18 +150,24 @@
 }
 
 .course-title {
+  display: flex;
+  /* text-align: center; */
+  align-items: center;
   font-size: 20px;
+  line-height: 1.2;
   font-weight: bold;
   color: #111827;
+  /* background-color: red; */
+  height: 110px;
+  font-family: Poppins;
   margin-bottom: 10px;
 }
 
 .course-description {
-  font-size: 14px;
   /* background-color: red; */
   color: #374151;
-  flex-grow: 1;
   margin-bottom: 15px;
+  font-family: Poppins;
 }
 
 .course-info {
@@ -215,36 +194,39 @@
   align-items: center;
   margin-bottom: 10px;
   font-family: inter-n7;
-  font-size: 18px;
+  font-size: 20px;
 }
 .datax {
   display: flex;
   /* background-color: red; */
   color: #666;
   width: fit-content;
+  justify-self: center;
+  align-self: center;
   height: 100%;
   /* align-self: center; */
-  padding-left: 30px;
+  /* padding-left: 30px; */
   flex-direction: column;
   gap: 10px;
   justify-content: center;
   align-items: left;
   margin-bottom: 10px;
-  font-family: inter-thin;
-  font-size: 13px;
+  font-family: Poppins;
+  font-size: 14px;
 }
 .title-fee {
-  width: 50%;
+  width: 40%;
+  font-family: Poppins;
   display: flex;
   flex-direction: column;
-  /* background-color: red; */
   justify-content: center;
   align-self: center;
   align-items: center;
+  text-align: center;
   /* gap: 20px; */
+  margin-bottom: 30px;
   h1 {
     font-size: 3em;
-    font-family: sans-serif;
     text-transform: uppercase;
     font-weight: 800;
     color: #333;
@@ -254,7 +236,7 @@
   p {
     font-size: 1em;
     color: #666;
-    width: 60%;
+    width: 100%;
   }
 }
 .courselvl {
