--- a/src/components/home-content/homeContent.css
+++ b/src/components/home-content/homeContent.css
@@ -494,3 +494,49 @@
   background-color: #dbeafe;
   color: #1d4ed8;
 }
+
+
+@media (max-width: 768px) {
+
+  .tag {
+    display: none;
+    padding: 5px 10px;
+    border-radius: 15px;
+    font-size: 14px;
+    color: transparent;
+    font-weight: 600;
+  }
+  
+.students {
+  /* text hidden */
+  display: none;
+}
+
+.section-title {
+  font-size: 1.5rem;
+  color: #000000;
+  text-align: center;
+  font-family: DM-Sans2;
+  font-weight: 800;
+}
+
+}
+
+@media (max-width: 1023px) {
+  .image-container {
+    animation: float 6s ease-in-out infinite;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 650px;
+    height: 325px;
+    background-image: url("../../img/pic1.webp");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    border-radius: 12px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.4);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+}
