--- a/src/components/home-content/homeContent.css
+++ b/src/components/home-content/homeContent.css
@@ -506,7 +506,9 @@
     color: transparent;
     font-weight: 600;
   }
-  
+  .content h1{
+    margin-top: 5vh;
+  }
 .students {
   /* text hidden */
   display: none;
@@ -519,24 +521,8 @@
   font-family: DM-Sans2;
   font-weight: 800;
 }
-
-}
-
-@media (max-width: 1023px) {
-  .image-container {
-    animation: float 6s ease-in-out infinite;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 650px;
-    height: 325px;
-    background-image: url("../../img/pic1.webp");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    border-radius: 12px;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.4);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  .button-underline{
+    display: none;
   }
 }
+
