--- a/src/components/courses-content/coursesContent.css
+++ b/src/components/courses-content/coursesContent.css
@@ -13,9 +13,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 101vh;
-  /* width: 100%; */
-  padding: 65px 60px;
+  height: 100vh;
+  width: 100%;
+  /* padding: 65px 60px; */
   .bg {
     display: flex;
     /* background-color: red; */
@@ -462,5 +462,97 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+
+/* media quieries  */
+@media screen and (max-width: 1024px) {
+  .courses-grid {
+    padding: 20px 10px;
+  }
+  .course-card {
+    width: 100%;
+  }
+  .course-title {
+    font-size: 1.5em;
+  }
+  .course-description {
+    font-size: 1em;
+  }
+  .course-info {
+    font-size: 1em;
+  }
+  .course-footer {
+    font-size: 1em;
+  }
+  .course-meta {
+    font-size: 1.5em;
+  }
+  .datax {
+    font-size: 1em;
+  }
+  .title-fee {
+    h1 {
+      font-size: 1em;
+    }
+    p {
+      font-size: 1em;
+    }
+  }
+  .courselvl {
+    font-size: 1em;
+  }
+  .enroll-button {
+    font-size: 1em;
+  }
+  .containerr {
+    padding: 80px 30px;
+  }
+  .section-title {
+    font-size: 2.5em;
+  }
+  .section-subtitle {
+    font-size: 1em;
+  }
+  .features-grid {
+    gap: 15px;
+  }
+  .feature-card {
+    padding: 15px;
+  }
+  .feature-icon {
+    font-size: 2.5em;
+  }
+  .feature-title {
+    font-size: 1.1em;
+  }
+  .feature-description {
+    font-size: 0.9em;
+  }
+  .outer-container {
+    height: 200vh;
+  }
+  .pricing-container {
+    width: 90%;
+  }
+  .pricing-card {
+    flex-direction: column;
+  }
+  .plan {
+    width: 100%;
+    height: 50vh;
+  }
+  .plan h3 {
+    font-size: 1.5em;
+  }
+  .plan h2 {
+    font-size: 1.7em;
+  }
+  .plan p {
+    font-size: 1em;
+  }
+  .btn {
+    font-size: 1em;
   }
 }
