--- a/src/components/about-content/aboutContentmedia.css
+++ b/src/components/about-content/aboutContentmedia.css
@@ -38,7 +38,7 @@
       }
 
       .vid-box {
-        display: flex;
+        display: none;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -528,7 +528,7 @@
       }
 
       .vid-box {
-        display: flex;
+        display: none;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -770,7 +770,7 @@
         }
 
         .vid-box {
-          display: flex;
+          display: none;
           flex-direction: column;
           justify-content: center;
           align-items: center;
@@ -1260,7 +1260,7 @@
         }
 
         .vid-box {
-          display: flex;
+          display: none;
           flex-direction: column;
           justify-content: center;
           align-items: center;
