--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -1,3 +1,4 @@
+/* Media Queries for Loader */
 @import "fonts/fonts.css";
 
 /* Full-screen loader container */
@@ -25,6 +26,39 @@
   animation: gradient-animation 10s ease infinite;
   z-index: 9999;
   transition: opacity 0.7s ease-in-out;
+
+  /* Text styling */
+  .loader-text,
+  .loader-quote {
+    font-family: Poppins;
+    font-size: 1rem;
+    color: #000;
+    text-transform: uppercase;
+    letter-spacing: 7px;
+    position: absolute;
+    opacity: 0;
+    animation-timing-function: ease-in-out;
+  }
+
+  /* First text "MHV Education" */
+  .loader-text {
+    animation: fadeInOut 1.5s forwards;
+    animation-iteration-count: 1; /* Run the animation only once */
+    animation-delay: 0s; /* Ensure it starts immediately */
+  }
+
+  /* Second text (Random Quote) */
+  .loader-quote {
+    animation: fadeInOut 2.5s forwards;
+    animation-delay: 1.5s; /* Start after "MHV Education" fades out */
+    animation-iteration-count: 1; /* Run the animation only once */
+  }
+
+  /* Fully fade out the loader before switching pages */
+  .loader-fadeout {
+    animation: fadeOut 1s forwards;
+    pointer-events: none;
+  }
 }
 
 /* Gradient animation */
@@ -46,32 +80,13 @@
   }
 }
 
-/* Text styling */
-.loader-text, .loader-quote {
-  font-size: 1rem;
-  color: #000;
-  text-transform: uppercase;
-  letter-spacing: 7px;
-  position: absolute;
-  opacity: 0;
-  animation-timing-function: ease-in-out;
-}
-
-/* First text "MHV Education" */
-.loader-text {
-  animation: fadeInOut 1.5s forwards;
-}
-
-/* Second text (Random Quote) */
-.loader-quote {
-  animation: fadeInOut 2.5s forwards;
-  animation-delay: 1.5s;
-}
-
 /* Fade in and out animation */
 @keyframes fadeInOut {
   0% {
     opacity: 0;
+  }
+  10% {
+    opacity: 0.5;
   }
   20% {
     opacity: 1;
@@ -79,13 +94,51 @@
   80% {
     opacity: 1;
   }
+  90% {
+    opacity: 0.5;
+  }
   100% {
     opacity: 0;
   }
 }
 
-/* Fully fade out the loader before switching pages */
-.loader-fadeout {
-  opacity: 0;
-  pointer-events: none;
+/* Fade out animation */
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+/* Media Queries for different screen sizes */
+@media (max-width: 1023px) {
+  .loader-container {
+    .loader-text,
+    .loader-quote {
+      font-size: 0.8rem;
+      letter-spacing: 5px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .loader-container {
+    .loader-text,
+    .loader-quote {
+      font-size: 0.6rem;
+      letter-spacing: 3px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .loader-container {
+    .loader-text,
+    .loader-quote {
+      font-size: 0.5rem;
+      letter-spacing: 2px;
+    }
+  }
 }
