--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -83,10 +83,10 @@
 }
 
 .logo img {
-  height: 80px;
+  height: 100%;
   width: 100%;
-  margin-left: 80px;
-  margin-bottom: 10px;
+  margin-left: 90px;
+  /* margin-bottom: 10px; */
   transition: height 0.3s ease-in-out;
 }
 
@@ -193,12 +193,13 @@
 .sidebar-header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
   padding-bottom: 10px;
 }
 
 .sidebar-logo {
-  width: 120px;
+  /* width: 40px; */
+  /* height: 40px; */
 }
 
 .sidebar-close {
@@ -207,22 +208,33 @@
   font-size: 1.8rem;
   color: #000;
   cursor: pointer;
+  height: fit-content;
 }
 
 /* Sidebar Navigation Links */
 .sidebar-links {
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  align-items: center;
 }
 
 .sidebar-links a {
+  text-align: center;
+  width: 100%;
   color: #000;
-  font-size: 16px;
+  font-size: 20px;
+  font-family: Poppins;
   font-weight: 600;
   text-decoration: none;
-  padding: 10px 0;
+  /* padding: 10px 0; */
   transition: color 0.3s ease-in-out;
+  background-color: rgba(255, 255, 255, 0.317);
+  border-radius: 5px;
+  margin-top: 10px;
+  padding: 5px 70px;
+  text-transform: uppercase;
 }
 
 .sidebar-links a:hover {
@@ -284,7 +296,7 @@
   }
 
   .sidebar-links a {
-    font-size: 15px;
+    /* font-size: 15px; */
   }
 
   .btn-enroll {
@@ -297,7 +309,7 @@
 @media (max-width: 768px) {
   .sidebar {
     width: 220px;
-    left: -220px; /* Ensures it stays hidden when closed */
+    left: -480px; /* Ensures it stays hidden when closed */
   }
 
   .btn-download {
@@ -332,21 +344,21 @@
 
   .menu-icon {
     display: block; /* Ensure menu icon is visible */
-    font-size: 2rem;
+    font-size: 1.8rem;
     cursor: pointer;
     color: #000;
-    margin-right: 20px;
+    margin-right: 10px;
   }
 }
 
 /* ✅ Small Mobile Devices */
 @media (max-width: 480px) {
   .sidebar {
-    width: 200px;
+    width: 100%;
   }
 
   .sidebar-logo {
-    width: 100px;
+    width: 80px;
   }
 
   .btn-enroll {
@@ -361,16 +373,14 @@
   }
 
   .menu-icon {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
   }
 }
-
-
 
 /* media queires of mobile width  */
 @media (max-width: 768px) {
   .btn-download {
-    color:transparent;
+    color: transparent;
     background-color: transparent;
     border: none;
     border-radius: 50px;
@@ -380,12 +390,11 @@
   .btn-download:hover {
     background-color: transparent;
   }
-  
+
   .logo img {
-    height: 80px;
+    height: 100%;
     width: 100%;
     margin-left: 10px;
-    margin-bottom: 10px;
     transition: height 0.3s ease-in-out;
   }
 }
