--- a/src/components/about-content/aboutContentmedia.css
+++ b/src/components/about-content/aboutContentmedia.css
@@ -4,6 +4,107 @@
     gap: 20px;
     padding: 40px 20px;
   }
+  .about-container {
+    .heading-content {
+      flex-direction: column;
+      gap: 20px;
+      padding: 60px 20px;
+      .title-box {
+        h1 {
+          font-size: 3em;
+        }
+        p {
+          font-size: 16px;
+        }
+      }
+      .vid-box {
+        display: none;
+      }
+    }
+  }
+  .mission-section {
+    flex-direction: column;
+    padding: 60px 20px;
+    .mission-content {
+      h2 {
+        font-size: 30px;
+      }
+      p {
+        font-size: 16px;
+      }
+    }
+    .image-content {
+      img {
+        height: 300px;
+      }
+    }
+  }
+  .values-section {
+    flex-direction: column;
+    padding: 60px 20px;
+    .program-content {
+      h1 {
+        font-size: 2em;
+      }
+      p {
+        font-size: 16px;
+      }
+      .values-list {
+        .value-item {
+          font-size: 1em;
+        }
+      }
+    }
+  }
+  .about-team {
+    padding: 20px 10px;
+    gap: 10px;
+    .team-content {
+      h2 {
+        font-size: 2em;
+      }
+      p {
+        font-size: 1em;
+      }
+    }
+  }
+  .team-member {
+    width: 100%;
+    height: 100%;
+  }
+  .section-3 {
+    padding: 60px 20px;
+    .title-3 {
+      width: 80%;
+      h1 {
+        font-size: 2.5em;
+      }
+      p {
+        font-size: 1em;
+      }
+    }
+    .content {
+      width: 100%;
+      h2 {
+        font-size: 1.5em;
+      }
+      h3 {
+        font-size: 1.2em;
+      }
+      p {
+        font-size: 1em;
+      }
+    }
+    .photo {
+      width: 100%;
+    }
+  }
+  .section-contact {
+    padding: 0 20px;
+  }
+  .vidmega {
+    display: none;
+  }
 
   .about-container .heading-content .title-box h1 {
     font-size: 3em;
@@ -45,6 +146,13 @@
 
   .values-section .values-content h2 {
     font-size: 2em;
+  }
+  .section-3 {
+    .profile1,
+    .profile2,
+    .profile3 {
+      height: fit-content;
+    }
   }
 }
 
@@ -97,6 +205,13 @@
 
   .team-member {
     width: 100%;
+  }
+  .section-3 {
+    .profile1,
+    .profile2,
+    .profile3 {
+      height: fit-content;
+    }
   }
 }
 
@@ -153,7 +268,7 @@
   }
 
   .team-member {
-    width: 100%;
+    width: 60%;
     height: auto;
     padding: 15px;
   }
@@ -161,22 +276,47 @@
   .team-photo {
     width: 100%;
   }
+  .section-3 {
+    & .content {
+      p {
+        margin-bottom: 10px;
+      }
+    }
+  }
 
+  .section-3 {
+    .title-3 {
+      width: 100%;
+      h1 {
+        margin-bottom: 10px;
+      }
+    }
+  }
+  .about-team {
+    .team-cards {
+      flex-direction: column;
+      align-items: center;
+      gap: 40px;
+    }
+  }
   .social {
     flex-wrap: wrap;
     gap: 10px;
-    justify-content: center;
+    justify-content: right;
+    margin-bottom: 40px;
   }
-}
-.exe1,
-.exe2,
-.exe3 {
-  flex-direction: column-reverse;
-  height: fit-content;
-}
-
-.profile1,
-.profile2,
-.profile3 {
-  height: fit-content;
+  .exe1,
+  .exe2,
+  .exe3 {
+    flex-direction: column-reverse;
+    height: fit-content;
+    gap: 10px;
+  }
+  .section-3 {
+    .profile1,
+    .profile2,
+    .profile3 {
+      height: fit-content;
+    }
+  }
 }
