--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -76,6 +76,7 @@
   display: flex;
   align-items: center;
   height: 65px;
+  margin-left: 40px;
 
   /* animation: fadeIn 1s ease-in-out; */
   /* filter: invert(100%); */
@@ -83,10 +84,10 @@
 }
 
 .logo img {
-  height: 100%;
+  height: 120%;
   width: 100%;
-  margin-left: 90px;
-  /* margin-bottom: 10px; */
+  margin-left: 50px;
+  margin-bottom: 5px;
   transition: height 0.3s ease-in-out;
 }
 
@@ -317,7 +318,7 @@
     display: none;
   }
   .logo img {
-    margin-left: 20px;
+    /* margin-left: 20px; */
     height: 60px;
     width: 100%;
   }
@@ -350,31 +351,37 @@
     color: #000;
     margin-right: 10px;
   }
-}
-.btn-download {
-  color: transparent;
-  background-color: transparent;
-  border: none;
-  border-radius: 50px;
-  padding: 8px 24px;
-  margin-right: 50px;
-}
-.btn-download:hover {
-  background-color: transparent;
+  .btn-download {
+    color: transparent;
+    background-color: transparent;
+    border: none;
+    border-radius: 50px;
+    padding: 8px 24px;
+    margin-right: 50px;
+  }
+  .btn-download:hover {
+    background-color: transparent;
+  }
+  .logo img {
+    height: 100%;
+    width: 100%;
+    transition: height 0.3s ease-in-out;
+  }
 }
 
-.logo img {
-  height: 100%;
-  width: 100%;
-  margin-left: 10px;
-  transition: height 0.3s ease-in-out;
-}
 /* ✅ Small Mobile Devices */
 @media (max-width: 480px) {
   .sidebar {
     width: 100%;
   }
 
+  .logo {
+    margin: 0;
+    img {
+      width: 100%;
+      margin: 0;
+    }
+  }
   .sidebar-logo {
     width: 80px;
   }
