--- a/src/components/about-content/aboutContent.css
+++ b/src/components/about-content/aboutContent.css
@@ -409,6 +409,9 @@
       margin-bottom: 20px;
       border-bottom: 1px solid #333;
       width: 30px;
+      span {
+        margin-right: 8px;
+      }
     }
     p {
       font-family: Poppins;
