--- a/src/components/home-content/homeContent.css
+++ b/src/components/home-content/homeContent.css
@@ -299,7 +299,8 @@
   /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.4); */
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   margin-top: 20px;
-  img {
+  .imgs video {
+    overflow: hidden;
     width: 100%;
     height: 100%;
     /* object-fit: cover; */
@@ -495,9 +496,7 @@
   color: #1d4ed8;
 }
 
-
 @media (max-width: 768px) {
-
   .tag {
     display: none;
     padding: 5px 10px;
@@ -506,23 +505,22 @@
     color: transparent;
     font-weight: 600;
   }
-  .content h1{
+  .content h1 {
     margin-top: 5vh;
   }
-.students {
-  /* text hidden */
-  display: none;
-}
+  .students {
+    /* text hidden */
+    display: none;
+  }
 
-.section-title {
-  font-size: 1.5rem;
-  color: #000000;
-  text-align: center;
-  font-family: DM-Sans2;
-  font-weight: 800;
-}
-  .button-underline{
+  .section-title {
+    font-size: 1.5rem;
+    color: #000000;
+    text-align: center;
+    font-family: DM-Sans2;
+    font-weight: 800;
+  }
+  .button-underline {
     display: none;
   }
 }
-
