--- a/src/components/about-content/aboutContent.css
+++ b/src/components/about-content/aboutContent.css
@@ -43,15 +43,16 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      border: 1px solid #333;
       width: 100%;
       height: 100%;
       /* background-color: #991d1d; */
       video {
         width: 100%;
-        height: 508px;
+        height: fit-content;
         /* border-radius: 10px; */
         /* cover: fill; */
-        object-fit: cover;
+        object-fit: contain;
       }
     }
   }
@@ -521,8 +522,9 @@
 }
 
 .section-contact {
-  height: 15vh;
-  background-color: rgba(0, 0, 0, 0.372);
+  height: 12vh;
+  background-color: rgba(53, 76, 167, 0.472);
+  backdrop-filter: saturate(180%) blur(20px);
   width: 100%;
   color: #fff;
   font-family: Poppins;
@@ -531,6 +533,10 @@
   /* justify-content: center; */
   padding: 0 50px;
   align-items: center;
+  justify-content: center;
+  h1 {
+    font-size: 2em;
+  }
 }
 
 .vidmega {
